[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/game.gd" id="1"]
[ext_resource type="Script" path="res://scripts/board.gd" id="2"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="3"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="4"]

[sub_resource type="Environment" id="1"]
ambient_light_color = Color(0.6, 0.6, 0.6, 1)
ambient_light_energy = 0.5

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(0.8, 0.6, 0.4, 1)
roughness = 0.8

[node name="Game" type="Node3D"]
script = ExtResource("1")

[node name="Board" type="Node3D" parent="."]
script = ExtResource("2")

[node name="BoardMesh" type="MeshInstance3D" parent="Board"]

[node name="GridLines" type="MeshInstance3D" parent="Board"]

[node name="Highlight" type="MeshInstance3D" parent="Board"]

[node name="Stones" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 15, 15)
script = ExtResource("3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="MessageLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="ChatContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -220.0
offset_right = 320.0
offset_bottom = -40.0
grow_vertical = 0

[node name="ChatInput" type="LineEdit" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 320.0
offset_bottom = -10.0
grow_vertical = 0
placeholder_text = "Enter chat message..."
